# holaAI-smart-contract

./: .env  .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
programs/bonding_curve/: Cargo.toml
programs/bonding_curve/src/: consts.rs  errors.rs  lib.rs  state.rs
programs/bonding_curve/src/instructions/: add_liquidity.rs  buy.rs  calc_amount.rs  create_amm_config.rs  create_pool.rs  create_token.rs  initialize.rs  mod.rs  proxy_initialize.rs  remove_liquidity.rs  sell.rs
tests/: bonding-curve.ts  create-token.ts  createMarket.ts  create_proxy_amm_config.ts  dex.ts  init.ts
tests/utils/: config.ts  fee.ts  index.ts  pda.ts  util.ts  web3.ts
